<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_map_location"
        android:title="@string/menu_item_map_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/menu_share"
        android:title="@string/menu_item_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share_with_message"
        android:icon="@drawable/menu_message"
        android:title="@string/menu_item_share_with_message"
        app:showAsAction="ifRoom" />

</menu>